Fixed list item hover for dark mode

--- a/src/SIL.XForge.Scripture/ClientApp/src/material-styles.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/material-styles.scss
@@ -17,6 +17,8 @@
 @use 'src/app/translate/editor/note-dialog/note-dialog-theme' as sf-note-dialog;
 @use 'src/app/translate/editor/editor-draft/editor-draft-theme' as sf-editor-draft;
 @use 'src/app/translate/biblical-terms/biblical-terms-theme' as sf-biblical-terms;
+@use 'src/app/translate/translate-overview/translate-overview.component' as sf-translate-overview;
+
 @use 'text' as sf-text;
 
 @mixin theme($theme) {
@@ -43,6 +45,7 @@
   @include sf-note-dialog.theme($theme);
   @include sf-tab-group.theme($theme);
   @include sf-text.theme($theme);
+  @include sf-translate-overview.theme($theme);
 
   // Custom variables
   --sf-disabled-foreground: #{mat.get-theme-color($theme, neutral, 70)};
